--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -18,10 +18,15 @@
   body {
     @apply font-IRANSansWeb text-base overflow-x-hidden scroll-smooth;
   }
+  button{
+    @apply disabled:opacity-70 disabled:bg-gray-400
+   }
 }
 
 @layer components {
- 
+ .overview-box{
+  @apply w-full min-h-32 flex flex-col justify-between bg-white rounded-lg p-4 shadow-sm
+ }
 }
 
 @layer utilities {
