--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -25,7 +25,7 @@
 
 @layer components {
  .overview-box{
-  @apply w-full min-h-32 flex flex-col justify-between bg-white rounded-lg p-4 shadow-sm
+  @apply w-full min-h-32 flex flex-col justify-between bg-white text-zinc-700 rounded-lg p-4 shadow-sm
  }
 }
 
