--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -27,6 +27,9 @@
  .overview-box{
   @apply w-full min-h-32 flex flex-col justify-between bg-white text-zinc-700 rounded-lg p-4 shadow-sm
  }
+ .box-header{
+  @apply bg-gray-100 flex flex-col gap-y-1.5 px-3 py-4 rounded-tr-lg rounded-tl-lg border-b border-gray-200
+ }
 }
 
 @layer utilities {
